Update examples for Asylo 0.6.3 release

--- a/grpc_server/BUILD
+++ b/grpc_server/BUILD
@@ -96,6 +96,7 @@ cc_unsigned_enclave(
         "@com_github_grpc_grpc//:grpc++_reflection",
         "@com_google_absl//absl/base:core_headers",
         "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
         "@com_google_absl//absl/time",
@@ -177,13 +178,15 @@ cc_library(
     srcs = ["translator_client.cc"],
     hdrs = ["translator_client.h"],
     deps = [
-        "//grpc_server:translator_server",
-        "//grpc_server:translator_server_cc_proto",
+        ":translator_server",
+        ":translator_server_cc_proto",
         "@com_github_grpc_grpc//:grpc",
         "@com_github_grpc_grpc//:grpc++",
         "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/time",
         "@com_google_asylo//asylo/util:status",
+        "@com_google_asylo//asylo/util:status_helpers",
     ],
 )
