--- a/remote/bouncing_circles/BUILD
+++ b/remote/bouncing_circles/BUILD
@@ -39,10 +39,12 @@ cc_library(
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/container:flat_hash_set",
         "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings",
         "@com_google_asylo//asylo/util:cleanup",
         "@com_google_asylo//asylo/util:logging",
         "@com_google_asylo//asylo/util:mutex_guarded",
+        "@com_google_asylo//asylo/util:posix_errors",
         "@com_google_asylo//asylo/util:status",
     ],
 )
@@ -186,6 +188,7 @@ cc_library(
         "@com_google_absl//absl/flags:flag",
         "@com_google_absl//absl/flags:parse",
         "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/status",
         "@com_google_absl//absl/strings",
         "@com_google_asylo//asylo:enclave_cc_proto",
         "@com_google_asylo//asylo:enclave_client",
